wwr/styles/rafting.css
:root{
    --primary-color: #082D0F; /* Dark Green */
    --secondary-color: #0C4767; /*indigo dye */
    --accent1-color: #FF9F1C; /* orange peel */
    --accent2-color: #91A199; /* ash grey */
    --heading-font: "Bebas Neue", sans-serif;
    --body-font: "Lato", sans-serif;
}
header {
    background-color: var(--primary-color);
    color:var(--accent2-color);
    display: grid;
    grid-template-columns: 1fr 2fr;
    align-items: center;
    justify-items: center;
    padding:5px
}
header nav{
    display:flex;
    justify-content: space-evenly;
}

header nav a {
    background: #fff;
    border: 1px solid var(--secondary-color);
    padding: 6px 25px; 
    color: black;
    font-weight: bold;
    text-decoration: none;
    
}

header nav a:hover {
    background-color: var(--accent1-color)
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;

}
body{
    font-family: var(--body-font);
    color: var(--accent2-color)
}

header, main, footer{
    width: 840px;
    margin: 0 auto;
}
h1, h2{
    font-family: var(--heading-font);
    color: var(--accent1-color);
}


nav, p, section, article{
    margin: 16px;
    padding: 8px;
}

.socialmedia a{
    text-decoration: none;
}
.hero{
    position: relative;
}
.hero img {
    display: block;
    width: 100%;
    height: auto;
  }
.hero #dryoar {
    position: absolute;
    top: 16px;
    font-size: 50px;
    width: 100%;
    padding: 15px;
    text-align: center;
    opacity: 0.8;
    background-color: var(--accent1-color);
    color: #fff; 
}
.hero #home-page-hero{
    position: absolute;
    top: 16px;
    font-size: 50px;
    width: 100%;
    padding: 15px;
    text-align: center;
    font-family:  'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-style: italic ;
    text-shadow:
    -2px -2px 0 black,
     2px -2px 0 black,
    -2px  2px 0 black,
     2px  2px 0 black;
    color: var(--accent1-color); 
}

#trip-page-hero{
  position: absolute;
    top: 16px;
    font-size: 50px;
    width: 100%;
    padding: 15px;
    text-align: center;
    font-family:  'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-style: italic ;
    text-shadow:
    -2px -2px 0 black,
     2px -2px 0 black,
    -2px  2px 0 black,
     2px  2px 0 black;
    color: var(--accent1-color); 
}

.trip-intro{
    position: absolute;
    bottom: 0;
    opacity: 0.8;
    width:70%;
    left: 0%;
    background-color: var(--primary-color);
    color: var(--accent1-color);
    padding:7px;
    border-radius: 20px;
    font-size: 1.2rem;
    

}
.hero a{
  background: #529ae8;
  border: 3px solid var(--secondary-color);
  padding: 10px 25px; 
  color: black;
  font-weight: bold;
  font-size:1.4rem ;
  text-decoration: none;
  position: absolute ;
  top: 70%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 10px;

}

.hero a:hover{
  background-color:var(--accent1-color);

}
article {
    position: absolute;
    bottom: 0;
    opacity: 0.8;
    width:60%;
    right:0;
    background-color: var(--secondary-color);
    color: var(--accent1-color);
    padding:7px;

    
}
.hero article img {
    float:right;
    width: 165px
}

.history{
    max-width: 960px;
    margin: 35px auto;
    padding: 5px;
    background-color: var(--primary-color);
    
   
   

}



.history h2{
    text-align: center;
    font-family: 'Bebas Neue', sans-serif;
    font-size: 50px;
    padding: 10px;
    margin-bottom: 0px;
    color: var(--accent1-color)
}

.history-grid {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

.history-text {
    flex: 1;
    font-family: 'Lato', sans-serif;
    font-size: 1rem;
    line-height: 1.6;
    color:white;
 
}

.history-image {
    flex: 0 0 235px;
}

.history-image img {
    width: 100%;
    height: auto;
    border-radius: 8px;
   
}

.adventure-gallery {
  background-color: #182c17;
  margin: 35px auto;
}

.adventure-gallery h2 {
    display: flex;
    justify-content: center;
    font-size: 50px;
}

.image-strip {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
}

.image-strip figure {
    background: var(--secondary-color);
    border: 1px solid black;
    padding: 10px 5px;
    border-radius: 8px;
    
   
}

.image-strip img{
    width: 100%;
    height: auto;
    border-radius: 8px;
}

.home-image-strip{
  display: flex;
  align-items: center;
  margin-top: 20px;
}

.home-image-strip figure {
  padding: 10px 5px;
  border-radius: 8px;
}
.home-image-strip img{
    width: 100%;
    height: auto;
    border-radius: 8px;
}
.home-image-strip figcaption{
  color: black;
  text-align: center;
  font-weight: 600;
  font-size: 1.2rem;
}

.footer-content{
    background-color: grey;
    display: flex;
    justify-content: center;       
    align-items: center;           
    flex-wrap: wrap;               
    text-align: center;
} 




.socialmedia a img{
    width:50px;
    height: auto;
    padding: 5px;
}




body {
  
  color: white;
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 20px;
}

#container {
  background-color: #182c17;
  display: flex;
  justify-content: space-between;
  gap: 20px;
  max-width: 1200px;
  margin: auto;
}

fieldset {
  border-color: var(--primary-color);
}

#send-message h3 {
  text-align: center;
  margin: 10px;
}

#send-message,
#contact-info {
  flex: 1;
  padding: 20px;
}

#send-message h2,
#contact-info h2 {
  color: #ffb700;
  font-style: italic;
}

#send-message input[type="text"],
#send-message input[type="email"],
#send-message textarea {
  width: 100%;
  padding: 8px;
  margin-bottom: 10px;
  font-size: 1rem;
}

.radio-group {
  margin-bottom: 20px;
}

.radio-group label {
  display: block;
  margin-bottom: 5px;
}

.employees {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.employee {
  text-align: center;
}

.employee img {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background-color: white;
}

.contact-card {
  background-color: #1d2d3e;
  padding: 20px;
  border-radius: 20px;
}

.contact-item {
  margin-bottom: 20px;
}

.contact-item h3 {
  color: #ffb700;
  display: inline-block;
  margin-left: 10px;
}

.contact-item p {
  margin-left: 35px;
  margin-top: 5px;
}



.map {
 
  text-align: center;
  padding: 5px;
  margin-top: 5px;
  
}

.submit-btn {
  background-color: #1d2d3e;
  color: white;
  border: 2px solid white;
  padding: 10px 20px;
  font-size: 1rem;
  cursor: pointer;
  border-radius: 5px;
  transition: background-color 0.3s;
  margin-top: 10px;
}

.submit-btn:hover {
  background-color: #ffb700;
  color: black;
  border-color: #ffb700;
}

#contact-title {
  text-align: center;
  background-color: var(--primary-color);
}

.newsletter {
  display: flex;
  align-items: center;
  position: relative;
  gap: 0;
  font-size: 1.5rem;
}

#sign-up {
  position: absolute;
  right: 50px;
  background-color: white;
}

#sign-up input {
  font-size: 1.2rem;
  padding: 5px;
}

#sign-up fieldset {
  display: flex;
  flex-direction: column;
  gap: 10px;
  min-width: 300px;
  max-width: 300px;
  padding: 20px;
}

#sign-up label {
  display: flex;
  flex-direction: column;
  color: black;
}


.tabs {
  margin-top: 2rem;
  background: var(--primary-color);
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0,0,0,0.1);
  padding: 1rem 3rem 1rem 3rem;
  position: relative;
  margin-bottom: 2rem;

  
}

.tabs p{
  font-size: 1.4rem;
  padding:5px;
  line-height: 1.5;
  text-align: left;
}

/* Hide radio buttons */
input[type="radio"] {
  display: none;
}

/* Style tab labels */
.tab-label {
  display: inline-block;
  padding: 0.5rem 1rem;
  margin-right: 0.5rem;
  background: #ddd;
  border-radius: 4px 4px 0 0;
  cursor: pointer;
  transition: background 0.3s;
  color:black;

}


#trip1:checked ~ .tab-buttons label[for="trip1"],
#trip2:checked ~ .tab-buttons label[for="trip2"],
#trip3:checked ~ .tab-buttons label[for="trip3"] {
  background: #0077cc;
  color: white;
}


.tab-content img{
  display: block;
  margin: 0 auto;
  max-width: 100%;
  height:auto;
  
}

/* Content sections */
.tab-content {
  text-align: center;
  display: none;
  padding: 1rem;
  border-top: 2px solid #0077cc;
  background: #fff;
  color: black;
  border-radius: 8px 8px 8px 8px;
}

/* Show content when corresponding radio is checked */
#trip1:checked ~ #content1,
#trip2:checked ~ #content2,
#trip3:checked ~ #content3 {
  display: block;
}

.tab-buttons{
  display: flex;
  justify-content: center;
  gap: .5rem;
}


.book-now a{
  background: #529ae8;
  border: 3px solid var(--secondary-color);
  padding: 10px 25px; 
  color: black;
  font-weight: bold;
  font-size:1.4rem ;
  text-decoration: none;
  border-radius: 10px;
}

.book-now{
 display:flex;
  justify-content: space-evenly;
  align-items: center;
  margin-bottom: 2rem;
  border:2px solid #082D0F;
  padding: 15px;
  border-radius: 20px;
  background-color: #082D0F;
}

.book-now a:hover{
  background-color:var(--accent1-color);

}


.trip-table{
  display:flex;
  justify-content: center;
  margin-bottom: 2rem;
}

.trip-table table{
  width:100%;
  font-size: 1.3rem;
}

table {
  color: black;
  border-collapse: collapse;
  border: 2px solid rgb(140 140 140);
  font-family: sans-serif;
  font-size: 0.8rem;
  letter-spacing: 1px;
}

caption {
  caption-side: bottom;
  padding: 10px;
  font-weight: bold;
}

thead,
tfoot {
  background-color: rgb(228 240 245);
}

th,
td {
  border: 1px solid rgb(160 160 160);
  padding: 8px 10px;
}

td:last-of-type {
  text-align: center;
}

tbody > tr:nth-of-type(even) {
  background-color: rgb(237 238 242);
}

tfoot th {
  text-align: right;
}

tfoot td {
  font-weight: bold;
}

